fixed out of bounds access on canvas for insert/delete line actions using this.columns instead of this.width for data array access added support for Opera added various shortcut alternatives using CTRL key to circumvent problems with Chrome (ALT + Cursor Left/Right leave page) and Opera (no ALT key shortcuts at all) changed data array handling in insertLine() method (old handling turned out to be quite slow in Opera) fixed data array handling in deleteLine() method (old handling dropped the last line in the data array) canvases are now generated with proper size depending on row/columns and font width/height definitions added ansiHeight output to position ansiHeight property now contains the actual height in lines starting with 1(!) for 1 line

--- a/trunk/ansiweb/include/ansiweb.css
+++ b/trunk/ansiweb/include/ansiweb.css
@@ -29,7 +29,7 @@
 
 .ansiweb span {
 	float: left;
-	width: 90px;
+	width: 140px;
 }
 
 .ansiweb a + span {
